Add copy code functionality with visual feedback and style adjustments

--- a/website/index.html
+++ b/website/index.html
@@ -46,6 +46,7 @@
                 <div class="code-header">
                     <h2 id="current-file">Select a file to view</h2>
                     <div class="header-buttons">
+                        <button id="copy-btn" class="btn copy-btn" disabled>Copy Code</button>
                         <button id="download-btn" class="btn download-btn" disabled>Download</button>
                     </div>
                 </div>
